# NEW_2005

./: .cursorrules  .gitignore  LICENSE  README.md  requirements.txt  result.csv
data/: 2parquet.py  HUAWEI - Export inventaire GenateQ(1).xlsx  INVENTAIRE HUAWEI 24032025.xlsx  Store_Sales_Price_Elasticity_Promotions_Data.parquet  TBC Lille.csv  TBC Lille.xlsx  employee_data.csv  employee_data.parquet  employee_data_mapped.xlsx  ~$TBC Lille.xlsx  系统 massy evx 20250325 和SN.xlsx
demo/architecture/: Agent-old.py  Agent-templete.py  Agent.py  Readfile.py
pandas-ai-3.0.0a16/: Makefile  README.md  pyproject.toml
pandas-ai-3.0.0a16/docs/v2/: advanced-security-agent.mdx  cache.mdx  contributing.mdx  custom-response.mdx  custom-whitelisted-dependencies.mdx  examples.mdx  judge-agent.mdx  llms.mdx  platform.mdx
pandas-ai-3.0.0a16/docs/v3/: agent.mdx  contributing.mdx  large-language-models.mdx  privacy-security.mdx
pandas-ai-3.0.0a16/examples/: docker_sandbox.ipynb
pandas-ai-3.0.0a16/extensions/llms/litellm/: README.md  pyproject.toml
pandas-ai-3.0.0a16/extensions/llms/litellm/pandasai_litellm/: __init__.py  litellm.py
pandas-ai-3.0.0a16/extensions/llms/litellm/tests/: test_litellm.py
pandas-ai-3.0.0a16/extensions/sandbox/docker/: pyproject.toml
pandas-ai-3.0.0a16/extensions/sandbox/docker/tests/: test_sandbox.py
pandas-ai-3.0.0a16/pandasai/: __init__.py  config.py  constants.py  exceptions.py
pandas-ai-3.0.0a16/pandasai/agent/: base.py  state.py
pandas-ai-3.0.0a16/pandasai/data_loader/: duck_db_connection_manager.py  loader.py  local_loader.py  (+3 more)
(+66 files in other folders)
