[tool.poetry]
name = "pandasai-litellm"
version = "0.0.1"
description = "LiteLLM integration for PandaAI"
authors = ["Gabriele Venturi"]
license = "MIT"
readme = "README.md"

[tool.poetry.urls]
"Documentation" = "https://docs.getpanda.ai/"
"Repository" = "https://github.com/sinaptik-ai/pandas-ai"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pandasai = ">=3.0.0b4"
litellm = "^1.61.20"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
