[tool.poetry]
name = "pandasai-docker"
version = "0.1.4"
description = ""
authors = ["ArslanSaleem <khan.arslan38@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.urls]
"Documentation" = "https://docs.getpanda.ai/v3/privacy-security"
"Repository" = "https://github.com/sinaptik-ai/pandas-ai"


[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pandasai = ">=3.0.0b4"
docker = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
